--- a/egina-wells-dashboard/package.json
+++ b/egina-wells-dashboard/package.json
@@ -12,14 +12,17 @@
     "dotenv": "^16.4.7",
     "mysql2": "^3.13.0",
     "next": "15.2.2",
+    "pg": "^8.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.1",
     "sequelize": "^6.37.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.11.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
