--- a/egina-wells-dashboard/package.json
+++ b/egina-wells-dashboard/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.21",
     "dotenv": "^16.4.7",
     "mysql2": "^3.13.0",
     "next": "15.2.2",
     "pg": "^8.14.0",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.1",
@@ -27,7 +29,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.0.14",
     "typescript": "^5"
   }
 }
